# gpt2-all-in

./: .gitignore  Makefile  README.md  add-pyenv-init.sh  add_pyenv_init.sh  benchmark.py  ds.py  enable-pyenv.sh  env.yml  pyproject.toml  run.py  train.py  train_debug.py
ckp/SFT/SFT-dev-23110609001699257643/: sft.py
configs/: cpu.json  cpu_ckp.json  gpu.json  gpu_ckp.json
docker/: Dock_conda  Dockerfile
experiments/: experiment.py  sampling_debug.py  train_debug.py
gpt2/: config.py  model.py  trainer.py
gpt2_ai/: config.py  model.py  trainer.py
gpt2_ai/benchmark/: base.py  baseline.py  benchmark_factory.py  cbt.py  lambada.py  models.py  wikitext.py
gpt2_ai/rlhf/: my.py  rlhf.py  rm.py  sft.py  sft_debug.py
gpt2_ai/train/: config.py  dataset.py  model.py  sample.py  trainer.py
gpt2_ai/util/: misc.py
notebooks/: ds.ipynb  run.py  test.ipynb
